Isotope filtering now works however this breaks the categorization. Isotope filtering is broken when changing category, but this also fixes the categorization

--- a/website/static/website/css/publications.css
+++ b/website/static/website/css/publications.css
@@ -1,5 +1,5 @@
 .publication-list {
-	padding-left: 145px; /* should be greater than the filter-bar width */
+	margin-left: 145px; /* should be greater than the filter-bar width */
 	margin-top: 25px;
 }
 
